--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,101 @@
-<h1>
-  {{title}}
-</h1>
+  <nav>
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo center">Restaurante Taiwan one</a>
+      <ul id="nav-mobile" class="left hide-on-med-and-down">
+        <li><a href="">Domicilios</a></li>
+        <li><a href="">Productos</a></li>
+        <li><a href="">Platos especiales</a></li>
+      </ul>
+    </div>
+  </nav>
+        
+
+      <table>
+        <thead>
+          <tr>
+              <th data-field="id"><h2>Datos personales</h2></th>
+              <th data-field="name"><h2>Datos del domicilio</h2></th>
+              
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr>
+          <td>
+            <div class="row">
+                <form class="col s12">
+                  <div class="row">
+                    <div class="input-field col s6">
+                      <input placeholder="Escribe su nombre completo" id="first_name" type="text" class="validate">
+                      <label for="first_name">Nombre completo</label>
+                    </div>
+                    <div class="input-field col s6">
+                      <input id="last_name" type="text" class="validate">
+                      <label for="last_name">Cedula</label>
+                    </div>
+                  </div>
+        
+                  <div class="row">
+                    <div class="input-field col s12">
+                      <input id="password" type="password" class="validate">
+                      <label for="password">Password</label>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="input-field col s12">
+                      <input id="email" type="email" class="validate">
+                      <label for="email">Email</label>
+                    </div>
+                  </div>
+                  <button class="btn waves-effect waves-light" type="submit" name="action">
+                    <i class="material-icons right">Aceptar</i>
+                  </button>
+                </form>
+              </div>
+            </td>
+
+
+            <td>
+              <div class="row">
+                  <form class="col s12">
+                    <div class="row">
+                      <div class="input-field col s6">
+                        <input placeholder="Placeholder" id="first_name" type="text" class="validate">
+                        <label for="first_name">First Name</label>
+                      </div>
+                      <div class="input-field col s6">
+                        <input id="last_name" type="text" class="validate">
+                        <label for="last_name">Last Name</label>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="input-field col s12">
+                        <input disabled value="I am not editable" id="disabled" type="text" class="validate">
+                        <label for="disabled">Disabled</label>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="input-field col s12">
+                        <input id="password" type="password" class="validate">
+                        <label for="password">Password</label>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="input-field col s12">
+                        <input id="email" type="email" class="validate">
+                        <label for="email">Email</label>
+                      </div>
+                    </div>
+                
+                  <button class="btn waves-effect waves-light" type="submit" name="action">
+                    <i class="material-icons right">Aceptar</i>
+                  </button>
+                  </form>
+                </div>
+            </td>
+
+          </tr>
+
+        </tbody>
+      </table>
+            
