--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,19 +9,89 @@
     </div>
   </nav>
         
+        <img src="assets/imagenes/restaurante.jpg" width="1400" height="600">
 
       <table>
         <thead>
           <tr>
-              <th data-field="id"><h2>Datos personales</h2></th>
-              <th data-field="name"><h2>Datos del domicilio</h2></th>
-              
+              <th data-field="id"><h2>Datos del domicilio</h2></th>
+              <th data-field="name"><h2>Datos personales</h2></th>
           </tr>
         </thead>
 
         <tbody>
           <tr>
           <td>
+              <div class="row">
+                  <form class="col s12">
+                    <div class="row">
+                      <div class="input-field col s6">
+                        <input placeholder="Escribe el nombre del Chef" id="first_name" type="text" class="validate">
+                        <label for="first_name">Nombre del Chef</label>
+                      </div>
+                      <div class="input-field col s6">
+                        <input id="last_name" type="text" class="validate">
+                        <label for="last_name">Nombre del postre</label>
+                      </div>
+                    </div>
+          
+                    <div class="row">
+                      <div class="input-field col s12">
+                        <input id="password" type="password" class="validate">
+                        <label for="password">Escribe un codigo para el envio</label>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="input-field col s12">
+                        <input id="direccion" type="text" class="validate">
+                        <label for="">Direccion del envio</label>
+                      </div>
+                    </div>
+
+                    Tipo de vino:
+                          <p>
+                            <input name="group1" type="radio" id="test1" />
+                            <label for="test1">VisLicor Jian Nan Chuna (剑南春)</label>
+                          </p>
+                          <p>
+                            <input name="group1" type="radio" id="test2" />
+                            <label for="test2">Licor Dong (汾酒)</label>
+                          </p>
+                          <p>
+                            <input class="with-gap" name="group1" type="radio" id="test3"  />
+                            <label for="test3">Licor Tributo Gujing (古井贡酒) </label>
+                          </p>
+                            <p>
+                              <input name="group1" type="radio" id="test4" />
+                              <label for="test4">Licor Maotai (茅台酒)</label>
+                          </p>
+
+
+
+                    <label>Platos de la semana</label>
+                      <select class="browser-default">
+                        <option value="" disabled selected>Seleccione una opcion</option>
+                        <option value="1">Dim sum</option>
+                        <option value="2">Sopa de aleta de tiburón</option>
+                        <option>Siew Yhok</option>
+                        <option>Arroz congee</option>
+                        <option>Youtiao</option>
+                        <option>Chow Mein</option>
+                        <option>Zongzi</option>
+                    </select>
+                    <br>
+                
+                  <button class="btn waves-effect waves-light" type="submit" name="action">
+                    <i class="material-icons right">Aceptar</i>
+                  </button>
+                  </form>
+                </div>
+            </td>
+
+
+
+
+            <td>
             <div class="row">
                 <form class="col s12">
                   <div class="row">
@@ -34,17 +104,42 @@
                       <label for="last_name">Cedula</label>
                     </div>
                   </div>
-        
+                    
+                    <label>Forma de pago:</label>
+                      <select class="browser-default">
+                        <option value="" disabled selected>Seleccione una opcion</option>
+                        <option value="1">Tarjeta de credito</option>
+                        <option value="2">Efectivo</option>
+                      </select>
+                      <br>
+                      Tipo de tarjeta de credito:
+                          <p>
+                            <input name="group2" type="radio" id="1" />
+                            <label for="1">Visa</label>
+                          </p>
+                          <p>
+                            <input name="group2" type="radio" id="2" />
+                            <label for="2">Mastercard</label>
+                          </p>
+                          <p>
+                            <input name="group2" type="radio" id="3"  />
+                            <label for="3">Bancolombia</label>
+                          </p>
+                            <p>
+                              <input name="group2" type="radio" id="4" />
+                              <label for="4">BBVA</label>
+                          </p>
+
                   <div class="row">
                     <div class="input-field col s12">
-                      <input id="password" type="password" class="validate">
-                      <label for="password">Password</label>
+                      <input id="" type="text" class="validate">
+                      <label for="">Valor:</label>
                     </div>
                   </div>
                   <div class="row">
                     <div class="input-field col s12">
                       <input id="email" type="email" class="validate">
-                      <label for="email">Email</label>
+                      <label for="email">Correo electronico</label>
                     </div>
                   </div>
                   <button class="btn waves-effect waves-light" type="submit" name="action">
@@ -53,49 +148,143 @@
                 </form>
               </div>
             </td>
-
-
-            <td>
-              <div class="row">
-                  <form class="col s12">
-                    <div class="row">
-                      <div class="input-field col s6">
-                        <input placeholder="Placeholder" id="first_name" type="text" class="validate">
-                        <label for="first_name">First Name</label>
-                      </div>
-                      <div class="input-field col s6">
-                        <input id="last_name" type="text" class="validate">
-                        <label for="last_name">Last Name</label>
-                      </div>
-                    </div>
-                    <div class="row">
-                      <div class="input-field col s12">
-                        <input disabled value="I am not editable" id="disabled" type="text" class="validate">
-                        <label for="disabled">Disabled</label>
-                      </div>
-                    </div>
-                    <div class="row">
-                      <div class="input-field col s12">
-                        <input id="password" type="password" class="validate">
-                        <label for="password">Password</label>
-                      </div>
-                    </div>
-                    <div class="row">
-                      <div class="input-field col s12">
-                        <input id="email" type="email" class="validate">
-                        <label for="email">Email</label>
-                      </div>
-                    </div>
-                
-                  <button class="btn waves-effect waves-light" type="submit" name="action">
-                    <i class="material-icons right">Aceptar</i>
-                  </button>
-                  </form>
-                </div>
-            </td>
-
           </tr>
-
         </tbody>
       </table>
             
+<h3>Platos de la semana</h3>
+ <div class="col s12 m7">
+    <div class="card horizontal">
+      <div class="card-image">
+        <img src="assets/imagenes/dimsum.jpg">
+      </div>
+      <div class="card-stacked">
+        <div class="card-action">
+          <a href="">Dim Sum</a>
+        </div>
+        <div class="card-content">
+          <p>El dim sum es un plato muy popular en China que suele tomarse como
+            tentempié a mitad de mañana o durante las primeras horas de la tarde acompañado de té.</p>
+        </div>
+        
+      </div>
+    </div>
+  </div>
+
+  <div class="col s12 m7">
+    <div class="card horizontal">
+      <div class="card-image">
+        <img src="assets/imagenes/tiburon.jpg">
+      </div>
+      <div class="card-stacked">
+        <div class="card-action">
+          <a href="">Sopa de aleta de tiburón</a>
+        </div>
+        <div class="card-content">
+          <p>Esta sopa se considera en China todo un manjar y suele servirse en ocasiones especiales,
+           tales como bodas, celebración del Año Nuevo, etc., principalmente porque se la considera como
+           un símbolo de prestigio y salud.</p>
+        </div>
+        
+      </div>
+    </div>
+  </div>
+
+<div class="col s12 m7">
+    <div class="card horizontal">
+      <div class="card-image">
+        <img src="assets/imagenes/siew.jpg">
+      </div>
+      <div class="card-stacked">
+        <div class="card-action">
+          <a href="">Siew Yhok</a>
+        </div>
+        <div class="card-content">
+          <p>La traducción literal de este término es carne asada, aunque suele encontrarse
+            traducido como cerdo asado crujiente o cerdo asado a la cantonesa, dado que se 
+            trata de pequeñas rodajas de cerdo asado marinado.</p>
+        </div>
+        
+      </div>
+    </div>
+  </div>
+
+  <div class="col s12 m7">
+    <div class="card horizontal">
+      <div class="card-image">
+        <img src="assets/imagenes/arroz.jpg">
+      </div>
+      <div class="card-stacked">
+        <div class="card-action">
+          <a href="">Arroz congee</a>
+        </div>
+        <div class="card-content">
+          <p>También conocido como jook, es un plato que se cocina en China 
+            desde hace más de dos mil años y se considera que es de fácil digestión.<br>
+            Consiste en una especie de papilla o sopa en la que se mezcla el arroz con otros
+            cereales, así como carnes, verduras y algunos aromatizantes para potenciar el sabor. </p>
+        </div>
+        
+      </div>
+    </div>
+  </div>
+
+
+  <div class="col s12 m7">
+    <div class="card horizontal">
+      <div class="card-image">
+        <img src="assets/imagenes/youtiao.jpg">
+      </div>
+      <div class="card-stacked">
+        <div class="card-action">
+          <a href="">Youtiao</a>
+        </div>
+        <div class="card-content">
+          <p>También puede encontrarse bajo la denominación You tiao. Se trata de un pan
+             frito con forma alargada, similar a los churros habituales en España, típico
+             de la gastronomía china y también del sureste asiático y Asia en general.  </p>
+        </div>
+        
+      </div>
+    </div>
+  </div>
+
+  <div class="col s12 m7">
+    <div class="card horizontal">
+      <div class="card-image">
+        <img src="assets/imagenes/chow.jpg">
+      </div>
+      <div class="card-stacked">
+        <div class="card-action">
+          <a href="">Chow MeinYoutiao</a>
+        </div>
+        <div class="card-content">
+          <p>Este plato es conocido internacionalmente como fideos asiáticos
+            (fideos largos hechos a base de trigo) y va acompañado normalmente
+             de carne de pollo o res y verduras, aunque también pueden incluirse
+              mariscos o pescados. Se condimenta con salsa de soja.  </p>
+        </div>
+        
+      </div>
+    </div>
+  </div>
+
+  <div class="col s12 m7">
+    <div class="card horizontal">
+      <div class="card-image">
+        <img src="assets/imagenes/zongzi.jpg">
+      </div>
+      <div class="card-stacked">
+        <div class="card-action">
+          <a href="">Zongzi</a>
+        </div>
+        <div class="card-content">
+          <p>Este plato también es conocido simplemente como Zong y a nivel
+             internacional como rellenos de arroz, dado que se trata de hojas
+             de bambú rellenas de arroz glutinoso que se cocinan habitualmente al vapor o se hierven.  </p>
+        </div>
+        
+      </div>
+    </div>
+  </div>
+  
