--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -112,7 +112,7 @@
                         <option value="2">Efectivo</option>
                       </select>
                       <br>
-                      Tipo de tarjeta de credito:
+                      Tipo de tarjeta de Credito:
                           <p>
                             <input name="group2" type="radio" id="1" />
                             <label for="1">Visa</label>
