--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
     </div>
   </nav>
         
-        <img src="assets/imagenes/restaurante.jpg" width="1400" height="600">
+        <img src="assets/imagenes/restaurant.jpg" width="1400" height="600">
 
       <table>
         <thead>
@@ -156,7 +156,7 @@
  <div class="col s12 m7">
     <div class="card horizontal">
       <div class="card-image">
-        <img src="assets/imagenes/dimsum.jpg">
+        <img src="assets/imagenes/dimsu.jpg">
       </div>
       <div class="card-stacked">
         <div class="card-action">
