--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -193,7 +193,7 @@
 <div class="col s12 m7">
     <div class="card horizontal">
       <div class="card-image">
-        <img src="assets/imagenes/siew.jpg">
+        <img src="assets/imagenes/sie.jpg">
       </div>
       <div class="card-stacked">
         <div class="card-action">
@@ -272,7 +272,7 @@
   <div class="col s12 m7">
     <div class="card horizontal">
       <div class="card-image">
-        <img src="assets/imagenes/zongzi.jpg">
+        <img src="assets/imagenes/zongz.jpg">
       </div>
       <div class="card-stacked">
         <div class="card-action">
