--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -212,7 +212,7 @@
   <div class="col s12 m7">
     <div class="card horizontal">
       <div class="card-image">
-        <img src="assets/imagenes/arroz.jpg">
+        <img src="assets/imagenes/arro.jpg">
       </div>
       <div class="card-stacked">
         <div class="card-action">
