--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -202,7 +202,7 @@
         <div class="card-content">
           <p>La traducción literal de este término es carne asada, aunque suele encontrarse
             traducido como cerdo asado crujiente o cerdo asado a la cantonesa, dado que se 
-            trata de pequeñas rodajas de cerdo asado marinado.</p>
+            trata de pequeñas rodajas de cerdo asado marinado..</p>
         </div>
         
       </div>
